--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --content-base dist/ --open"
   },
   "repository": {
     "type": "git",
@@ -23,5 +24,15 @@
   "bugs": {
     "url": "https://github.com/acgillette/L-System-Generator/issues"
   },
-  "homepage": "https://github.com/acgillette/L-System-Generator#readme"
+  "homepage": "https://github.com/acgillette/L-System-Generator#readme",
+  "dependencies": {
+    "quicksettings": "^3.0.1",
+    "three": "^0.87.1",
+    "webpack": "^3.5.5"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.0"
+  }
 }
