--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/acgillette/L-System-Generator#readme",
   "dependencies": {
+    "lindenmayer": "^1.3.6",
     "quicksettings": "^3.0.1",
     "three": "^0.87.1",
     "webpack": "^3.5.5"
